# glb-extractor

./: .gitignore  CMakeLists.txt  README.md
codeblocks/: glb-extractor.cbp
src/: encoder.cpp  glb.cpp  main.cpp
src/libglb/: CMakeLists.txt  encoder.h  glb.h  glbencoder.cpp  glbencoder.h
